# vasko-da-gama

./: .gitignore  README.md  config.py  config_dist.yaml  cron_generator.py  direct.py  fun.py  gamaslist.csv  main.py  pyproject.toml  reminders.py  requirements.txt  schedule.py  utils.py  vasko.py
docker/: Dockerfile
