[tool.poetry]
name = "vaskodagama"
version = "0.1.0"
description = "🧹 Slack Bot for frat chores notifications"
authors = ["Mathias Oterhals Myklebust <mathias@oterbust.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
certifi = "2021.10.8"
charset-normalizer = "2.0.7"
idna = "3.3"
munch = "2.5.0"
munch-stubs = "0.1.1"
mypy = "0.960"
mypy-extensions = "0.4.3"
python-dateutil = "2.8.2"
python-dotenv = "0.19.1"
PyYAML = "6.0"
requests = "2.26.0"
six = "1.16.0"
tomli = "2.0.1"
types-python-dateutil = "2.8.17"
types-pytz = "2021.3.8"
types-PyYAML = "6.0.8"
types-requests = "2.27.30"
types-urllib3 = "1.26.15"
typing-extensions = "4.2.0"
urllib3 = "1.26.7"
praw = "^7.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
